<resources>
    <string name="app_name">Signup</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">ZIP</string>
    <string name="sign_up">Sign Up</string>
</resources>
