<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <EditText
        android:id="@+id/address1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/address_1"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/address2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/address_2"
        android:layout_below="@+id/address1"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:layout_below="@+id/address2"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="textPersonName"
        android:layout_below="@+id/city"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/zip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/zip"
        android:inputType="textPersonName"
        android:layout_below="@+id/state"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/sign_up"
        android:layout_alignParentEnd="true" />

</RelativeLayout>